[package]
name = "umash-sys"
version = "0.2.0"
authors = ["Backtrace I/O <team@backtrace.io>"]
license = "MIT"
description = "FFI wrappers for the umash hash/fingerprint function"
keywords = ["hash", "fingerprint", "umash"]
categories = ["external-ffi-bindings"]
repository = "https://github.com/backtrace-labs/umash-sys"
edition = "2018"

[build-dependencies]
cc = "1"

