[package]
name = "umash-sys"
version = "0.6.1"
authors = ["Backtrace I/O <team@backtrace.io>"]
license = "MIT"
description = "FFI wrappers for the umash hash/fingerprint function"
keywords = ["hash", "fingerprint", "umash"]
categories = ["external-ffi-bindings"]
repository = "https://github.com/backtrace-labs/umash-sys"
edition = "2018"

[features]
default = ["long_input_routines"]
# Dispatch to micro-architecture specific throughput-optimised code
# for longer inputs.
long_input_routines = []

[build-dependencies]
cc = "1"

